--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
   },
   "dependencies": {
     "flowbite-react": "^0.8.0",
+    "framer-motion": "^12.4.0",
+    "next": "^15.1.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.29.0"
   },
   "devDependencies": {
+    "@types/next": "^8.0.7",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
