--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "flowbite-react": "^0.8.0",
     "framer-motion": "^12.4.0",
+    "heroicons": "^2.2.0",
     "next": "^15.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
